--- a/BlazorApp1/Pages/Counter.razor
+++ b/BlazorApp1/Pages/Counter.razor
@@ -6,4 +6,4 @@
 
 <p>Current count: @CurrentCount</p>
 
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+<RadzenButton Click="IncrementCount">Click me</RadzenButton>
